It's the small wins in life...forgot to link my JS file

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <!-- <<<<<<<<< Script >>>>>>>>>>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+    <script type="text/javascript" src="script.js"></script>
+
 
 
 </head>
@@ -35,8 +37,8 @@
     <!-- <<<<<<<<< Topic Buttons to Be Pressed for API Script >>>>>>>>>>-->
     <div class="container">
         <div class="row">
-            <div class="col" id="buttons-appear-here">
-
+            <div class="col">
+                <div id="buttons-appear-here"></div>
             </div>
         </div>
     </div>
@@ -56,7 +58,7 @@
                 <form>
                     <p>Add An Additional Emotion</p>
                     <input type="text" name="emotionInput" id="emotion-input">
-                    <input type="submit" value="Submit">
+                    <input type="submit" value="Submit" id="add-emotion">
                 </form>
 
             </div>
